# icsc-bayesian-inference

./: .gitignore  LHC_data.txt  LHC_data_2023.txt  abstract.md  analytic-example.ipynb  example.ipynb  exercise-data.ipynb  exercise.ipynb  mc_background.txt  mc_signal.txt  mcmc.ipynb  mcmc.py  plot.py  prior-dependence.ipynb  pyproject.toml  showcase-plots.ipynb
exercise/: exercise.tex
slides/: hypo_plot.ipynb  latexmkrc  main.tex
slides/beamerthemeLMU/: beamerthemeLMU.sty
