[project]
name = "icsc-bayesian-inference"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "corner>=2.2.3",
    "iminuit>=2.30.1",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "scipy>=1.15.1",
    "sympy>=1.13.3",
]
